Added Elasticsearch repository. Updated to the latest version of SpringBoot, Java 11.